[package]
name = "chachat"
version = "0.1.0"
authors = [
    "Hayden Rinn <hrinn@calpoly.edu>",
    "Adam Perlin <aperlin@calpoly.edu>",
]
edition = "2018"
description = "An encrypted messaging program for the command line"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
bytes = "1.1.0"
mio = "0.6.23"
mio-extras = "2.0.6"
futures = "0.3"
tokio = { version = "1", features = ["full", "io-util"] }
chacha20poly1305 = "0.9.0"
rand = "0.8.4"
rand_chacha = "0.3.1"
rand_seeder = "0.2.2"